Some small updates for forms in QSAR plugin. Nothing useful yet.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@5187 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar/plugin.xml
+++ b/plugins/net.bioclipse.qsar/plugin.xml
@@ -9,8 +9,8 @@
             filenames="qsar.xml"
             icon="icons/sample.gif"
             contributorClass="net.bioclipse.qsar.editors.QSAREditorContributor"
-            class="net.bioclipse.qsar.editors.QSAREditor"
-            id="net.bioclipse.qsar.editors.QSAREditor">
+            class="net.bioclipse.qsar.editors.QSARFormEditor"
+            id="net.bioclipse.qsar.editors.QSARFormEditor">
       </editor>
    </extension>
 
