--- a/plugins/net.bioclipse.qsar/plugin.xml
+++ b/plugins/net.bioclipse.qsar/plugin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
 
+
 <!--
  Copyright (c) 2007-2008 The Bioclipse Project and others.
  All rights reserved. This program and the accompanying materials
@@ -16,6 +17,8 @@
 -->
 
 <plugin>
+
+   <extension-point id="descriptorProvider" name="descriptorProvider" schema="schema/descriptorProvider.exsd"/>
 
    <extension point="org.eclipse.emf.ecore.generated_package">
       <package
