Added a QsarManager for business logic.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@6653 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar/plugin.xml
+++ b/plugins/net.bioclipse.qsar/plugin.xml
@@ -33,4 +33,13 @@
             class="net.bioclipse.qsar.util.QsarResourceFactoryImpl"/>
    </extension>
 
+
+   <extension
+         point="net.bioclipse.scripting.contribution">
+      <scriptContribution
+            id="net.bioclipse.qsar.business.QsarManager"
+            service="net.bioclipse.qsar.business.QsarManagerFactory">
+      </scriptContribution>
+   </extension>
+
 </plugin>
