Adapted to new EP syntax.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@6665 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.cdk.qsar/plugin.xml
+++ b/plugins/net.bioclipse.cdk.qsar/plugin.xml
@@ -35,7 +35,7 @@
             id="net.bioclipse.cdk.descriptorprovider"
             name="Chemistry Development Kit (CDK)"
             icon="icons/molecule2D.png"
-            class="net.bioclipse.cdk.qsar.impl.CDKDescriptorCalculator"
+            calculator="net.bioclipse.cdk.qsar.impl.CDKDescriptorCalculator"
             acceptsSmiles="true"
             acceptsCml="true"
             acceptsMolfile="true">
