Added test for descriptor calculations that fail.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@6671 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar.test/plugin.xml
+++ b/plugins/net.bioclipse.qsar.test/plugin.xml
@@ -37,8 +37,8 @@
                </descriptor>
                <descriptor
                      category="net.bioclipse.qsar.test.category2"
-                     id="net.bioclipse.qsar.test.descriptor4"
-                     name="descriptor4">
+                     id="net.bioclipse.qsar.test.descriptorERROR"
+                     name="ErrorDescriptor">
                </descriptor>
          </descriptorProvider>
    </extension>
