Wrote tests for descriptor parameters. Also refactored large tests to smaller ones.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@6678 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar.test/plugin.xml
+++ b/plugins/net.bioclipse.qsar.test/plugin.xml
@@ -46,6 +46,19 @@
                      requires3D="true"
                      name="Requires3D">
                </descriptor>
+               <descriptor
+                     category="net.bioclipse.qsar.test.category1"
+                     id="net.bioclipse.qsar.test.descriptorParams"
+                     name="descriptorParams">
+                     <parameter
+                           defaultvalue="true"
+                           key="bogusParameter">
+                     </parameter>
+                     <parameter
+                           defaultvalue="101.67"
+                           key="bogusParameter2">
+                     </parameter>
+               </descriptor>
          </provider>
    </extension>
 
