Refactored out Parameters as a class, and gace it an attribute "description" to describe the parameter.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@6717 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar.test/plugin.xml
+++ b/plugins/net.bioclipse.qsar.test/plugin.xml
@@ -64,10 +64,12 @@
                      name="descriptorParams">
                      <parameter
                            defaultvalue="true"
+                           description="description1"
                            key="bogusParameter">
                      </parameter>
                      <parameter
                            defaultvalue="101.67"
+                           description="description2"
                            key="bogusParameter2">
                      </parameter>
                </descriptor>
