--- a/plugins/net.bioclipse.qsar/build.properties
+++ b/plugins/net.bioclipse.qsar/build.properties
@@ -14,7 +14,23 @@ bin.includes = .,\
                model/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               lib/antlr-2.7.5.jar,\
+               lib/arq-extra.jar,\
+               lib/arq.jar,\
+               lib/commons-logging-1.1.1.jar,\
+               lib/concurrent.jar,\
+               lib/icu4j_3_4.jar,\
+               lib/iri.jar,\
+               lib/jena.jar,\
+               lib/jenatest.jar,\
+               lib/json.jar,\
+               lib/junit.jar,\
+               lib/lucene-core-2.3.1.jar,\
+               lib/stax-api-1.0.jar,\
+               lib/wstx-asl-3.0.0.jar,\
+               lib/xercesImpl.jar,\
+               lib/xml-apis.jar
 jars.compile.order = .
 source.. = src/
 output.. = bin/
