--- a/plugins/net.bioclipse.qsar.test/plugin.xml
+++ b/plugins/net.bioclipse.qsar.test/plugin.xml
@@ -3,27 +3,27 @@
 <plugin>
    <extension
          point="net.bioclipse.qsar.descriptorProvider">
-         <category
+         <!--category
                id="net.bioclipse.qsar.test.category1"
                name="category1">
          </category>
          <category
                id="net.bioclipse.qsar.test.category2"
                name="category2">
-         </category>
+         </category-->
          <provider
                calculator="net.bioclipse.qsar.test.DummyCalculator"
                id="net.bioclipse.qsar.test.descriptorProvider1"
                name="descriptorProvider1">
                <descriptor
-                     category="net.bioclipse.qsar.test.category1"
+                     category="http://www.blueobelisk.org/ontologies/chemoinformatics-algorithms/#molecularDescriptor"
                      id="net.bioclipse.qsar.test.descriptor1"
                      definition="net.bioclipse.qsar.test.definition1"
                      description="net.bioclipse.qsar.test.description1"
                      name="descriptor1">
                </descriptor>
                <descriptor
-                     category="net.bioclipse.qsar.test.category2"
+                     category="http://www.blueobelisk.org/ontologies/chemoinformatics-algorithms/#constitutionalDescriptor"
                      id="net.bioclipse.qsar.test.descriptor2"
                      definition="net.bioclipse.qsar.test.definition2"
                      description="net.bioclipse.qsar.test.description2"
@@ -35,21 +35,21 @@
                id="net.bioclipse.qsar.test.descriptorProvider2"
                name="descriptorProvider2">
                <descriptor
-                     category="net.bioclipse.qsar.test.category1"
+                     category="http://www.blueobelisk.org/ontologies/chemoinformatics-algorithms/#molecularDescriptor"
                      id="net.bioclipse.qsar.test.descriptor3"
                      definition="net.bioclipse.qsar.test.definition3"
                      description="net.bioclipse.qsar.test.description3"
                      name="descriptor3">
                </descriptor>
                <descriptor
-                     category="net.bioclipse.qsar.test.category2"
+                     category="http://www.blueobelisk.org/ontologies/chemoinformatics-algorithms/#constitutionalDescriptor"
                      id="net.bioclipse.qsar.test.descriptorERROR"
                      definition="net.bioclipse.qsar.test.definitionERROR"
                      description="net.bioclipse.qsar.test.descriptionERROR"
                      name="ErrorDescriptor">
                </descriptor>
                <descriptor
-                     category="net.bioclipse.qsar.test.category2"
+                     category="http://www.blueobelisk.org/ontologies/chemoinformatics-algorithms/#constitutionalDescriptor"
                      id="net.bioclipse.qsar.test.descriptor3D"
                      definition="net.bioclipse.qsar.test.definition3D"
                      description="net.bioclipse.qsar.test.description3D"
@@ -57,7 +57,7 @@
                      name="Requires3D">
                </descriptor>
                <descriptor
-                     category="net.bioclipse.qsar.test.category1"
+                     category="http://www.blueobelisk.org/ontologies/chemoinformatics-algorithms/#molecularDescriptor"
                      id="net.bioclipse.qsar.test.descriptorParams"
                      definition="net.bioclipse.qsar.test.definitionParams"
                      description="net.bioclipse.qsar.test.descriptionParams"
