Adapted tests for removed methods and changed plugin.xml.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@6764 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar.test/plugin.xml
+++ b/plugins/net.bioclipse.qsar.test/plugin.xml
@@ -17,7 +17,7 @@
                name="descriptorProvider1">
            <descriptorImpl
                      id="net.bioclipse.qsar.test.descriptor1"
-                  definition="http://www.blueobelisk.org/ontologies/chemoinformatics-algorithms/#carbonTypes"
+                  definition="http://www.blueobelisk.org/ontologies/chemoinformatics-algorithms/#BCUT"
                      description="net.bioclipse.qsar.test.description1"
                      name="descriptor1">
             </descriptorImpl>
