--- a/plugins/net.bioclipse.qsar.test/plugin.xml
+++ b/plugins/net.bioclipse.qsar.test/plugin.xml
@@ -14,6 +14,7 @@
          <provider
                calculator="net.bioclipse.qsar.test.DummyCalculator"
                id="net.bioclipse.qsar.test.descriptorProvider1"
+               shortName="provider1"
                name="descriptorProvider1">
            <descriptorImpl
                      id="net.bioclipse.qsar.test.descriptor1"
@@ -31,6 +32,7 @@
          <provider
                calculator="net.bioclipse.qsar.test.DummyCalculator"
                id="net.bioclipse.qsar.test.descriptorProvider2"
+               shortName="provider2"
                name="descriptorProvider2">
            <descriptorImpl
                      id="net.bioclipse.qsar.test.descriptor3"
