Added CDK icon and shortname.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@6781 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.cdk.qsar/plugin.xml
+++ b/plugins/net.bioclipse.cdk.qsar/plugin.xml
@@ -24,7 +24,8 @@
          <provider
             id="net.bioclipse.cdk.descriptorprovider"
             name="Chemistry Development Kit (CDK)"
-            icon="icons/molecule2D.png"
+            shortName="CDK"
+            icon="icons/cdklogo.png"
             calculator="net.bioclipse.cdk.qsar.impl.CDKDescriptorCalculator"
             acceptsSmiles="true"
             acceptsCml="true"
