Refactored preferences to net.bc.qsar as needed in QSARManager. PreferencePage stays in qsar.ui.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@6805 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar/plugin.xml
+++ b/plugins/net.bioclipse.qsar/plugin.xml
@@ -42,4 +42,12 @@
       </scriptContribution>
    </extension>
 
+
+   <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer
+            class="net.bioclipse.qsar.prefs.QSARPreferenceInitializer">
+      </initializer>
+   </extension>
+
 </plugin>
