Replaced icon with 16x16.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@6812 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar.ui/plugin.xml
+++ b/plugins/net.bioclipse.qsar.ui/plugin.xml
@@ -7,7 +7,7 @@
       <editor
             name="QSAR Editor"
             filenames="qsar.xml"
-            icon="icons/sample.gif"
+            icon="icons/descriptor.png"
             contributorClass="net.bioclipse.qsar.ui.editors.QSAREditorContributor"
             class="net.bioclipse.qsar.ui.editors.QSARFormEditor"
             id="net.bioclipse.qsar.editors.QSARFormEditor">
@@ -78,7 +78,7 @@
 	   project="true"
 	   class="net.bioclipse.qsar.ui.wizards.NewQSARProjectWizard"
 	   category="net.bioclipse.categories.qsar"
-	   icon="icons/sample.gif">
+	   icon="icons/descriptor.png">
    	   <description>New QSAR Wizard</description>
 	   <selection class="org.eclipse.core.resources.IResource"/>
 	</wizard>
