--- a/plugins/net.bioclipse.cdk.qsar/plugin.xml
+++ b/plugins/net.bioclipse.cdk.qsar/plugin.xml
@@ -24,6 +24,9 @@
          <provider
             id="net.bioclipse.cdk.descriptorprovider"
             name="Chemistry Development Kit (CDK)"
+            vendor="Chemistry Development Kit (CDK)"
+            namespace="http://cdk.sf.net"
+            version="1.1.0.v20080808"
             shortName="CDK"
             icon="icons/cdklogo.png"
             calculator="net.bioclipse.cdk.qsar.impl.CDKDescriptorCalculator"
