Tests for new namespaces.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@6902 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar.test/plugin.xml
+++ b/plugins/net.bioclipse.qsar.test/plugin.xml
@@ -15,6 +15,7 @@
                calculator="net.bioclipse.qsar.test.DummyCalculator"
                id="net.bioclipse.qsar.test.descriptorProvider1"
                shortName="provider1"
+               namespace="net.bioclipse.qsar.test.provider1.namespace"
                name="descriptorProvider1">
            <descriptorImpl
                      id="net.bioclipse.qsar.test.descriptor1"
