Updated cdk and tests for descriptor new attributes, like namespace.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@6903 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.cdk.qsar/plugin.xml
+++ b/plugins/net.bioclipse.cdk.qsar/plugin.xml
@@ -23,9 +23,9 @@
       point="net.bioclipse.qsar.descriptorProvider">
          <provider
             id="net.bioclipse.cdk.descriptorprovider"
-            name="Chemistry Development Kit (CDK)"
-            vendor="Chemistry Development Kit (CDK)"
-            namespace="http://cdk.sf.net"
+            name="Chemistry Development Kit"
+            vendor="Chemistry Development Kit"
+            namespace="http://cdk.sourceforge.net"
             version="1.1.0.v20080808"
             shortName="CDK"
             icon="icons/cdklogo.png"
