--- a/plugins/net.bioclipse.qsar/.classpath
+++ b/plugins/net.bioclipse.qsar/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="net/bioclipse/qsar/descriptor/model/DescriptorInstancePropertySource.java" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry exported="true" kind="lib" path="lib/antlr-2.7.5.jar" sourcepath="net.bioclipse.qsarsrc.zip"/>
