Updated tests to reflect descriptorInstance removal.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@6909 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar.test/plugin.xml
+++ b/plugins/net.bioclipse.qsar.test/plugin.xml
@@ -43,7 +43,7 @@
             </descriptorImpl>
            <descriptorImpl
                      id="net.bioclipse.qsar.test.descriptorERROR"
-                  definition="http://www.blueobelisk.org/ontologies/chemoinformatics-algorithms/#chiChain"
+                  definition="http://www.blueobelisk.org/ontologies/chemoinformatics-algorithms/#aromaticBondsCount"
                      description="net.bioclipse.qsar.test.descriptionERROR"
                      name="ErrorDescriptor">
             </descriptorImpl>
