Replaced editor models with EMF model. Don't know why I didn't do this from the beginning.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@6917 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar.ui/plugin.xml
+++ b/plugins/net.bioclipse.qsar.ui/plugin.xml
@@ -8,7 +8,7 @@
             name="QSAR Editor"
             filenames="qsar.xml"
             icon="icons/descriptor.png"
-            contributorClass="net.bioclipse.qsar.ui.editors.QSAREditorContributor"
+            contributorClass="org.eclipse.emf.edit.ui.action.EditingDomainActionBarContributor"
             class="net.bioclipse.qsar.ui.editors.QSARFormEditor"
             id="net.bioclipse.qsar.editors.QSARFormEditor">
       </editor>
