--- a/plugins/net.bioclipse.qsar.ui/.classpath
+++ b/plugins/net.bioclipse.qsar.ui/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry excluding="net/bioclipse/qsar/builder/QSARBuilderREF.java|net/bioclipse/qsar/builder/QSARNatureREF.java" kind="src" path="src"/>
+	<classpathentry excluding="net/bioclipse/qsar/builder/QSARBuilderREF.java|net/bioclipse/qsar/builder/QSARNatureREF.java|net/bioclipse/qsar/ui/editors/QsarXMLEditor.java" kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
