Added FullBuildAction to forms toolbar.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@6935 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar.ui/plugin.xml
+++ b/plugins/net.bioclipse.qsar.ui/plugin.xml
@@ -6,6 +6,7 @@
          point="org.eclipse.ui.editors">
       <editor
             name="QSAR Editor"
+            default="true"
             filenames="qsar.xml"
             icon="icons/descriptor.png"
             contributorClass="org.eclipse.emf.edit.ui.action.EditingDomainActionBarContributor"
