Updated default value and description for BondCountDescriptor.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@9108 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.cdk.qsar/plugin.xml
+++ b/plugins/net.bioclipse.cdk.qsar/plugin.xml
@@ -105,8 +105,8 @@
                   description="Number of bonds of a certain bond order."
                   name="BondCount">
                   <parameter
-                        defaultvalue="0"
-                        description="Bond order to count"
+                        defaultvalue=""
+                        description="Bond order to count. Possible values: are 's'=single, 'd'=double, 't'=triple, 'q'=quadruple and ''=all"
                         key="order">
                   </parameter>
              </descriptorImpl>
