--- a/plugins/net.bioclipse.cdk.qsar/.settings/org.eclipse.jdt.core.prefs
+++ b/plugins/net.bioclipse.cdk.qsar/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,4 @@
-#Tue Aug 19 17:43:01 CEST 2008
+#Thu Feb 26 20:47:49 CET 2009
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
 org.eclipse.jdt.core.compiler.compliance=1.5
