Added missing stuff to build.props.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@9110 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar/build.properties
+++ b/plugins/net.bioclipse.qsar/build.properties
@@ -30,7 +30,10 @@ bin.includes = .,\
                lib/stax-api-1.0.jar,\
                lib/wstx-asl-3.0.0.jar,\
                lib/xercesImpl.jar,\
-               lib/xml-apis.jar
+               lib/xml-apis.jar,\
+               icons/,\
+               ontology/,\
+               schema/
 jars.compile.order = .
 source.. = src/
 output.. = bin/
