Set version to 2.0.0.B20090227
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@9115 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar/plugin.properties
+++ b/plugins/net.bioclipse.qsar/plugin.properties
@@ -11,7 +11,7 @@
 # $Id$
 
 pluginName = Qsar Model
-providerName = www.example.org
+providerName = The Bioclipse Team
 _UI_CreateChild_text = {0}
 _UI_CreateChild_text2 = {1} {0}
 _UI_CreateChild_text3 = {1}
