Updates for API and chema changes.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@9346 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.cdk.qsar/plugin.xml
+++ b/plugins/net.bioclipse.cdk.qsar/plugin.xml
@@ -63,6 +63,11 @@
                         defaultvalue="C"
                         description="Element name. Wild card * means all atoms"
                         key="elementName">
+                        <listedvalue value="C" />
+                        <listedvalue value="N" />
+                        <listedvalue value="O" />
+                        <listedvalue value="H" />
+                        <listedvalue value="*" />
                   </parameter>
              </descriptorImpl>
              <descriptorImpl
