Updated generated EMF edit code following model update.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@9527 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.bibtexml.edit/plugin.properties
+++ b/plugins/net.bioclipse.bibtexml.edit/plugin.properties
@@ -315,3 +315,5 @@ _UI_TechreportType_doi_feature = Doi
 _UI_TechreportType_url_feature = Url
 _UI_UnpublishedType_doi_feature = Doi
 _UI_UnpublishedType_url_feature = Url
+_UI_BibTeXMLEntryType_type = Bib Te XML Entry Type
+_UI_BibTeXMLEntryType_id_feature = Id
