Changed extension from qsar to xml.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@9541 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar.model/plugin.xml
+++ b/plugins/net.bioclipse.qsar.model/plugin.xml
@@ -23,7 +23,7 @@
 
    <extension point="org.eclipse.emf.ecore.extension_parser">
       <parser
-            type="qsar"
+            type="xml"
             class="net.bioclipse.qsar.util.QsarResourceFactoryImpl"/>
    </extension>
 
