Updated QSAR-ML schema, model, code, edit, and tests to handle descriptor results.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@9581 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar.model.edit/plugin.properties
+++ b/plugins/net.bioclipse.qsar.model.edit/plugin.properties
@@ -433,3 +433,14 @@ _UI_MonthStringType_Sep_literal = Sep
 _UI_MonthStringType_Oct_literal = Oct
 _UI_MonthStringType_Nov_literal = Nov
 _UI_MonthStringType_Dec_literal = Dec
+_UI_DescriptorresultlistsType_type = Descriptorresultlists Type
+_UI_DescriptorresultType_type = Descriptorresult Type
+_UI_DescriptorvalueType_type = Descriptorvalue Type
+_UI_DescriptorresultlistsType_descriptorresult_feature = Descriptorresult
+_UI_DescriptorresultType_descriptorvalue_feature = Descriptorvalue
+_UI_DescriptorresultType_descriptorid_feature = Descriptorid
+_UI_DescriptorresultType_structureid_feature = Structureid
+_UI_DescriptorvalueType_index_feature = Index
+_UI_DescriptorvalueType_label_feature = Label
+_UI_DescriptorvalueType_value_feature = Value
+_UI_QsarType_descriptorresultlist_feature = Descriptorresultlist
