Schema and code updates: * Removed transient 'changed' attribute to track changes in model, this will be implemented as preference instead. * Decided that id for defining descriptors must be unique and moved BO reference from id to 'ontologyid' attribute. Also removed namespace since only one BO ontology is supported anyway.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@9583 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar.model.edit/plugin.properties
+++ b/plugins/net.bioclipse.qsar.model.edit/plugin.properties
@@ -444,3 +444,4 @@ _UI_DescriptorvalueType_index_feature = Index
 _UI_DescriptorvalueType_label_feature = Label
 _UI_DescriptorvalueType_value_feature = Value
 _UI_QsarType_descriptorresultlist_feature = Descriptorresultlist
+_UI_DescriptorType_ontologyid_feature = Ontologyid
