Fixed branding: Resize feature image to 32x32 and added feature branding text.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@9676 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar.ui/build.properties
+++ b/plugins/net.bioclipse.qsar.ui/build.properties
@@ -14,4 +14,6 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               about.ini
+               about.ini,\
+               about.mappings,\
+               about.properties
