--- a/plugins/net.bioclipse.qsar.ui/about.ini
+++ b/plugins/net.bioclipse.qsar.ui/about.ini
@@ -4,5 +4,8 @@
 # "%key" are externalized strings defined in about.properties
 # This file does not need to be translated.
 
+# Property "aboutText" contains blurb for "About" dialog (translated)
+aboutText=%blurb
+
 # Property "featureImage" contains path to feature image (32x32)
-featureImage=icons/descriptor.png
+featureImage=icons/descriptor32.png
