Fixed broken line endings in about.properties.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@9688 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar.ui/about.properties
+++ b/plugins/net.bioclipse.qsar.ui/about.properties
@@ -18,7 +18,7 @@ blurb=Bioclipse QSAR\n\
 Version: {featureVersion}\n\
 Build id: {0}\n\
 \n\
-Tools and frameworks for QSAR in Bioclipse.
+Tools and frameworks for QSAR in Bioclipse.\
 \n\
 (c) Copyright 2009 The Bioclipse Project. All rights reserved.\n\
 Visit http://www.bioclipse.net
